fixing hello world so it will launch